package collectibles;

public class Armor {
}
