package collectibles;

public class Inventory {
}
