package collectibles;

public class Item {
}
