package collectibles;

public class Weapon {
}
