package controller.Choices;

import world.Location;

public class Choice {

    private String description;
    private Location targetLocation;
    private requirements (need datatype)

    public Choice(String description, Location targetLocation)
    {
        this.description = description;
        this.targetLocation = targetLocation;
    }
}
