package creatures.attributes;

public class Class {
}
