package creatures.attributes;

public class Race {
}
